--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,11 +1,42 @@
 @import '~bootstrap/scss/bootstrap';
 
 header {
-    color: red;
+    section.jumbo {
+        background-image: url('../assets/img/jumbotron.jpg');
+        height: 30rem;
+    }
 }
+
 main {
-    color: green;
-}
-footer {
-    color: magenta;
+    background-color: #1c1c1c;
+
+    section.current-series {
+        max-width: 1300px;
+        margin: 0 auto;
+        padding: 3rem 0;
+
+
+        .card {
+            width: calc((100% / 6) - 1rem);
+            height: 300px;
+            margin: 1rem 1rem 1rem 0;
+            background-color: transparent;
+            
+            div.image {
+                width: 100%;
+                height: 80%;
+
+                img {
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            
+            div.description {
+                color: white;
+            }
+            
+        }
+    }
+
 }
