--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -1,5 +1,11 @@
 @import '~bootstrap/scss/bootstrap';
 
+
+.my-container {
+    max-width: 1300px;
+    margin: 0 auto;
+}
+
 header {
     section.jumbo {
         background-image: url('../assets/img/jumbotron.jpg');
@@ -11,17 +17,14 @@ main {
     background-color: #1c1c1c;
 
     section.current-series {
-        max-width: 1300px;
-        margin: 0 auto;
         padding: 3rem 0;
-
 
         .card {
             width: calc((100% / 6) - 1rem);
             height: 300px;
             margin: 1rem 1rem 1rem 0;
             background-color: transparent;
-            
+
             div.image {
                 width: 100%;
                 height: 80%;
@@ -31,12 +34,35 @@ main {
                     height: 100%;
                 }
             }
-            
+
             div.description {
                 color: white;
             }
-            
+
         }
+
+        .button {
+            margin: 0 auto;
+
+            .my-button {
+                border: none;
+                background-color: #0282f9;
+                color: white;
+                font-weight: bold;
+                padding: .8rem 3rem;
+            }
+        }
+    }
+
+    section.banner{
+        background-color: #0282f9;
+        color: white;
+        height: 10rem;
+
+        img {
+            width: 60px;
+        }
+
     }
 
 }
